--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -561,6 +561,8 @@
           href: fastly-edge-cloud-tutorial.md
         - name: FCM HUB
           href: fcm-hub-tutorial.md
+        - name: 字段 ID
+          href: field-id-tutorial.md
         - name: Fidelity NetBenefits
           href: fidelitynetbenefits-tutorial.md
         - name: Fieldglass
