--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -464,6 +464,8 @@
               href: platform/alerts-metric-logs.md
             - name: 使用 Resource Manager 模板
               href: platform/alerts-metric-create-templates.md
+            - name: 排查指标警报问题
+              href: platform/alerts-troubleshoot-metric.md
         - name: 日志警报规则
           items:
             - name: 配置基于分析查询的警报
@@ -992,10 +994,10 @@
           href: insights/redis-cache-insights-overview.md
         - name: Azure Cosmos DB
           href: insights/cosmosdb-insights-overview.md
-        - name: Key Vault
-          href: insights/key-vaults-insights-overview.md
         - name: 网络
           href: insights/network-insights-overview.md
+        - name: Key Vault
+          href: insights/key-vault-insights-overview.md
         - name: 存储
           displayname: 'storage, monitor, insights, storage accounts, azure storage'
           href: insights/storage-insights-overview.md
@@ -1096,6 +1098,7 @@
     - name: 工作簿
       items:
         - name: 概述
+          displayname: Workbooks
           href: platform/workbooks-overview.md
         - name: 可视化效果
           href: platform/workbooks-visualizations.md
