--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -592,8 +592,12 @@
           items:
             - name: .NET
               href: create-cassandra-dotnet.md
-            - name: Java
+            - name: .NET Core
+              href: create-cassandra-dotnet-core.md
+            - name: Java v3
               href: create-cassandra-java.md
+            - name: Java v4
+              href: create-cassandra-java-v4.md
             - name: Node.js
               href: create-cassandra-nodejs.md
             - name: Python
@@ -615,6 +619,8 @@
               href: cassandra-faq.md
             - name: 弹性缩放
               href: manage-scale-cassandra.md
+            - name: 分区
+              href: cassandra-partitioning.md
             - name: 辅助索引
               href: cassandra-secondary-index.md
         - name: 操作指南
