--- a/articles/dev-spaces/index.yml
+++ b/articles/dev-spaces/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: zarhoads
   manager: gwallace
   ms.date: 09/30/2019
-  ms.openlocfilehash: 752482e33573de4e466b7812616d03f04d2cf395
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: ea9865d35b25b5691f702b91c6255f0f703c3e90
+  ms.sourcegitcommit: 69156ae3c1e22cc570dda7f7234145c8226cc162
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "78196206"
+  ms.lasthandoff: 06/03/2020
+  ms.locfileid: "84310030"
 landingContent:
 - title: 关于 Azure Dev Spaces
   linkLists:
@@ -64,7 +64,7 @@ landingContent:
     links:
     - text: 将 GitHub 操作与 Azure Dev Spaces 配合使用
       url: how-to/github-actions.md
-    - text: 将开发计算机连接到 AKS 群集
-      url: how-to/connect.md
-    - text: 配置 AKS Dev Spaces 群集以使用 Helm 3
-      url: how-to/helm-3.md
+    - text: 在 Visual Studio Code 中使用 Local Process with Kubernetes
+      url: how-to/local-process-kubernetes-vs-code.md
+    - text: 在 Visual Studio 中使用 Local Process with Kubernetes
+      url: how-to/local-process-kubernetes-visual-studio.md
