--- a/articles/active-directory/governance/TOC.yml
+++ b/articles/active-directory/governance/TOC.yml
@@ -31,7 +31,7 @@
           href: manage-user-access-with-access-reviews.md
         - name: 管理从条件访问中排除的用户
           href: conditional-access-exclusion.md
-- name: 操作方法指南
+- name: 操作指南
   expanded: true
   items:
     - name: 权利管理
@@ -50,7 +50,7 @@
               href: entitlement-management-reports.md
             - name: 存档日志和报告
               href: entitlement-management-logs-and-reporting.md
-            - name: 故障排除
+            - name: 疑难解答
               href: entitlement-management-troubleshoot.md
         - name: 目录所有者
           items:
@@ -120,3 +120,10 @@
               href: ../privileged-identity-management/pim-resource-roles-perform-access-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
             - name: 完成访问评审
               href: ../privileged-identity-management/pim-resource-roles-complete-access-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
+- name: 参考
+  expanded: true
+  items:
+    - name: 访问评审 - Graph API
+      href: 'https://docs.microsoft.com/graph/api/resources/accessreviews-root?view=graph-rest-beta'
+    - name: 权利管理 - Graph API
+      href: 'https://docs.microsoft.com/graph/api/resources/entitlementmanagement-root?view=graph-rest-beta'
