--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -73,8 +73,10 @@
       href: azure-netapp-files-resize-capacity-pools-or-volumes.md
     - name: 开发
       items:
-        - name: REST
+        - name: REST API
           href: azure-netapp-files-develop-with-rest-api.md
+        - name: 通过 PowerShell 使用 REST API
+          href: develop-rest-api-powershell.md
         - name: Azure NetApp 文件 SDK 和 CLI 工具
           href: azure-netapp-files-sdk-cli.md
         - name: 排查 Azure NetApp 文件资源提供程序错误
