--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -129,6 +129,8 @@
           href: batch-custom-images.md
         - name: 在虚拟网络中创建池
           href: batch-virtual-network.md
+        - name: 创建具有公共 IP 地址的池
+          href: create-pool-public-ip.md
         - name: 装载虚拟文件系统
           href: virtual-file-mount.md
         - name: 装载 Azure 文件共享
