--- a/articles/blockchain/service/TOC.yml
+++ b/articles/blockchain/service/TOC.yml
@@ -11,7 +11,8 @@
       href: create-member.md
     - name: 使用 CLI 创建成员
       href: create-member-cli.md
-    - name: 使用模板创建成员
+    - name: 使用 ARM 模板创建成员
+      displayName: Resource Manager
       href: create-member-template.md
     - name: 连接到事务节点
       items:
