--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -41,6 +41,8 @@
       href: ../../backup/security-baseline.md
     - name: Batch 安全基线
       href: ../../batch/security-baseline.md
+    - name: 容器实例安全基线
+      href: ../../container-instances/security-baseline.md
     - name: 容器注册表安全基线
       href: ../../container-registry/security-baseline.md
     - name: Cosmos DB 安全基线
