--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -50,6 +50,8 @@
           href: create-fslogix-profile-container.md
         - name: 使用 Azure 文件存储和 Azure AD DS
           href: create-profile-container-adds.md
+    - name: 创建配置文件容器文件共享
+      href: create-file-share.md
     - name: 配置主机池设置
       items:
         - name: RDP 属性
@@ -134,6 +136,8 @@
       href: 'https://docs.microsoft.com/windows-server/remote/remote-desktop-services/virtual-machine-recs?context=/azure/virtual-desktop/context/context'
 - name: 资源
   items:
+    - name: PowerShell
+      href: '/powershell/module/az.desktopvirtualization/?view=azps-4.2.0#desktopvirtualization'
     - name: 体验评估器
       href: 'https://azure.microsoft.com/services/virtual-desktop/assessment/'
     - name: 定价计算器
