--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -860,8 +860,10 @@
               href: disks-enable-ultra-ssd.md
             - name: 对磁盘进行基准检验
               href: disks-benchmarks.md
-        - name: 查找未附加的磁盘
+        - name: 查找未附加的磁盘 - PowerShell
           href: find-unattached-disks.md
+        - name: 查找未附加的磁盘 - 门户
+          href: ../disks-find-unattached-portal.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
         - name: 磁盘常见问题解答
           href: faq-for-disks.md
     - name: 管理网络
