--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -48,8 +48,6 @@
       href: upgrade-virtual-wan.md
     - name: 配置自定义 IPsec 策略
       href: virtual-wan-custom-ipsec-portal.md
-    - name: 在中心安装 Azure 防火墙
-      href: howto-firewall.md
     - name: ExpressRoute
       items:
         - name: 创建 ExpressRoute 连接
@@ -60,6 +58,8 @@
       items:
         - name: 创建站点到站点连接
           href: virtual-wan-site-to-site-portal.md
+        - name: 多个 ISP 链接 - Azure 路径选择
+          href: path-selection-multiple-links.md
     - name: 用户 VPN（点到站点）
       items:
         - name: 创建用户 VPN 连接
@@ -86,8 +86,6 @@
           href: openvpn-azure-ad-client.md
         - name: 配置多应用程序 Azure AD 身份验证
           href: openvpn-azure-ad-tenant-multi-app.md
-        - name: 在中心安装 Azure 防火墙
-          href: howto-firewall.md
     - name: 路由
       items:
         - name: 将流量从虚拟中心路由到 NVA
@@ -98,12 +96,14 @@
               href: virtual-wan-route-table.md
         - name: 查看虚拟中心有效路由
           href: effective-routes-virtual-hub.md
-        - name: 多个 ISP 链接 - Azure 路径选择
-          href: path-selection-multiple-links.md
     - name: 安全性
       items:
         - name: 在中心安装 Azure 防火墙
           href: howto-firewall.md
+    - name: 监视
+      items:
+        - name: 日志和指标
+          href: logs-metrics.md
 - name: 参考
   items:
     - name: Azure PowerShell
