--- a/articles/blockchain/service/TOC.yml
+++ b/articles/blockchain/service/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: 关于 Azure 区块链服务
       href: overview.md
+    - name: 新增功能
+      href: whats-new.md
 - name: 快速入门
   expanded: true
   items:
