--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -190,6 +190,18 @@
               href: storage-blob-reserved-capacity.md
             - name: 计划和管理成本
               href: ../common/storage-plan-manage-costs.md
+            - name: 可伸缩性和性能目标
+              items:
+                - name: Blob 存储
+                  href: scalability-targets.md
+                - name: 标准存储帐户
+                  href: ../common/scalability-targets-standard-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 高级块 Blob 存储帐户
+                  href: scalability-targets-premium-block-blobs.md
+                - name: 高级页 Blob 存储帐户
+                  href: scalability-targets-premium-page-blobs.md
+                - name: 存储资源提供程序
+                  href: ../common/scalability-targets-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 并发
           href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 查找、搜索和了解 Blob 数据
@@ -473,60 +485,8 @@
               href: ../common/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 参考
       items:
-        - name: 可伸缩性和性能目标
-          items:
-            - name: Blob 存储
-              href: scalability-targets.md
-            - name: 标准存储帐户
-              href: ../common/scalability-targets-standard-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 高级块 Blob 存储帐户
-              href: scalability-targets-premium-block-blobs.md
-            - name: 高级页 Blob 存储帐户
-              href: scalability-targets-premium-page-blobs.md
-            - name: 存储资源提供程序
-              href: ../common/scalability-targets-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Azure PowerShell
-          href: /powershell/module/az.storage
-        - name: Azure CLI
-          href: /cli/azure/storage
-        - name: .NET
-          items:
-            - name: Blob（版本 12.x）
-              href: /dotnet/api/azure.storage.blobs
-            - name: 数据移动
-              href: /dotnet/api/microsoft.azure.storage.datamovement
-            - name: 存储资源提供程序
-              href: /dotnet/api/overview/azure/storage/management
-        - name: Java
-          items:
-            - name: Blob（版本 12.x）
-              href: 'https://azuresdkdocs.blob.core.windows.net/$web/java/azure-storage-blob/12.0.0/index.html'
-            - name: Blob（版本 8.x）
-              href: /java/api/com.microsoft.azure.storage.blob
-            - name: 存储资源提供程序
-              href: /java/api/overview/azure/storage/management
-        - name: JavaScript（版本 12.x）
-          href: /javascript/api/@azure/storage-blob/
-        - name: Python（版本 12.x）
-          href: /python/api/azure-storage-blob/
-        - name: REST
-          items:
-            - name: Blob、队列、表和文件
-              href: /rest/api/storageservices
-            - name: 存储资源提供程序
-              href: /rest/api/storagerp
-            - name: 导入/导出
-              href: /rest/api/storageimportexport
-        - name: C++
-          href: 'https://azure.github.io/azure-storage-cpp'
-        - name: Ruby
-          href: 'https://azure.github.io/azure-storage-ruby'
-        - name: PHP
-          href: 'https://azure.github.io/azure-storage-php/'
-        - name: iOS
-          href: 'https://azure.github.io/azure-storage-ios/'
-        - name: Android
-          href: 'https://azure.github.io/azure-storage-android'
+        - name: Azure Blob 存储参考
+          href: ../blobs/reference.md
         - name: AzCopy v10
           items:
             - name: azcopy
