--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -195,6 +195,10 @@
                   href: ../storage/files/storage-sync-offline-data-transfer.md?toc=/azure/databox/toc.json&bc=/azure/databox/breadcrumb/toc.json
                 - name: 从 HDFS 存储
                   href: ../storage/blobs/data-lake-storage-migrate-on-premises-hdfs-cluster.md?toc=/azure/databox/toc.json&bc=/azure/databox/breadcrumb/toc.json
+    - name: 参考
+      items:
+        - name: Azure CLI
+          href: /cli/azure/ext/databox/databox
     - name: 资源
       items:
         - name: Data Box 产品
