--- a/articles/lab-services/classroom-labs/TOC.yml
+++ b/articles/lab-services/classroom-labs/TOC.yml
@@ -82,6 +82,8 @@
           href: specify-marketplace-images.md
         - name: 指定支持信息（实验室帐户所有者）
           href: lab-account-owner-support-information.md
+        - name: 实验室成本管理
+          href: cost-management-guide.md
     - name: 创建和配置教室实验室（教师）
       items:
         - name: 创建和管理教室实验室
