--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -235,6 +235,10 @@
               href: howto-migrate-using-export-and-import.md
             - name: 停机时间最短的迁移
               href: howto-migrate-online.md
+        - name: 连接应用程序
+          items:
+            - name: 配置 TLS
+              href: howto-tls-configurations.md
         - name: 配置服务器参数
           items:
             - name: Azure 门户
