--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -148,9 +148,9 @@
               href: storage-files-identity-auth-active-directory-enable.md
             - name: 启用 AD DS 身份验证
               href: storage-files-identity-ad-ds-enable.md
-            - name: 分配权限
+            - name: 分配共享级权限
               href: storage-files-identity-ad-ds-assign-permissions.md
-            - name: 配置权限
+            - name: 分配目录/文件级权限
               href: storage-files-identity-ad-ds-configure-permissions.md
             - name: 装载文件共享
               href: storage-files-identity-ad-ds-mount-file-share.md
@@ -234,48 +234,8 @@
           href: storage-troubleshoot-cannot-delete-files-azure-file-share.md
 - name: 参考
   items:
-    - name: Azure PowerShell（存储）
-      href: /powershell/module/az.storage
-    - name: Azure PowerShell（存储同步）
-      href: /powershell/module/az.storagesync
-    - name: Azure CLI
-      href: /cli/azure/storage
-    - name: .NET
-      items:
-        - name: 文件存储（版本 11.x）
-          href: /dotnet/api/microsoft.azure.storage.file
-        - name: 数据移动
-          href: /dotnet/api/microsoft.azure.storage.datamovement
-        - name: 存储资源提供程序
-          href: /dotnet/api/overview/azure/storage/management
-    - name: Java
-      items:
-        - name: 文件存储（版本 8.x）
-          href: /java/api/com.microsoft.azure.storage.file
-        - name: 存储资源提供程序
-          href: /java/api/overview/azure/storage/management
-    - name: JavaScript（版本 10.x）
-      href: /javascript/api/@azure/storage-file
-    - name: Python（版本 2.x）
-      href: /python/api/azure-storage-file/?view=azure-python
-    - name: REST
-      items:
-        - name: Blob、队列、表和文件
-          href: /rest/api/storageservices
-        - name: 存储资源提供程序
-          href: /rest/api/storagerp
-        - name: 导入/导出
-          href: /rest/api/storageimportexport
-    - name: C++
-      href: 'https://azure.github.io/azure-storage-cpp'
-    - name: Ruby
-      href: 'https://azure.github.io/azure-storage-ruby'
-    - name: PHP
-      href: 'https://azure.github.io/azure-storage-php/'
-    - name: iOS
-      href: 'https://azure.github.io/azure-storage-ios/'
-    - name: Android
-      href: 'https://azure.github.io/azure-storage-android'
+    - name: Azure 文件共享存储参考
+      href: ../files/reference.md
     - name: 资源管理器模板
       displayName: arm
       href: /azure/templates/microsoft.storage/allversions
