--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -71,8 +71,18 @@
       href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: 灾难恢复和故障转移
       href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-    - name: 性能和可伸缩性清单
-      href: storage-performance-checklist.md
+    - name: 性能、缩放和成本优化
+      items:
+        - name: 可伸缩性和性能目标
+          items:
+            - name: 队列存储
+              href: scalability-targets.md
+            - name: 标准存储帐户
+              href: ../common/scalability-targets-standard-account.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: 存储资源提供程序
+              href: ../common/scalability-targets-resource-provider.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+        - name: 性能和可伸缩性清单
+          href: storage-performance-checklist.md
     - name: 并发
       href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: 监视和故障排除
@@ -214,54 +224,8 @@
           href: ../common/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
 - name: 参考
   items:
-    - name: 可伸缩性和性能目标
-      items:
-        - name: 队列存储
-          href: scalability-targets.md
-        - name: 标准存储帐户
-          href: ../common/scalability-targets-standard-account.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-        - name: 存储资源提供程序
-          href: ../common/scalability-targets-resource-provider.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-    - name: Azure PowerShell
-      href: /powershell/module/az.storage
-    - name: Azure CLI
-      href: /cli/azure/storage
-    - name: .NET
-      items:
-        - name: 队列（版本 11.x）
-          href: /dotnet/api/microsoft.azure.storage.queue
-        - name: 队列（版本 12.x）
-          href: /dotnet/api/azure.storage.queues
-        - name: 存储资源提供程序
-          href: /dotnet/api/overview/azure/storage/management
-    - name: Java
-      items:
-        - name: 队列（版本 8.x）
-          href: /java/api/com.microsoft.azure.storage.queue
-        - name: 队列（版本 12.x）
-          href: 'https://azuresdkdocs.blob.core.windows.net/$web/java/azure-storage-queue/12.0.0/index.html'
-        - name: 存储资源提供程序
-          href: /java/api/overview/azure/storage/management
-    - name: JavaScript（版本 12.x）
-      href: /javascript/api/@azure/storage-queue
-    - name: Python（版本 12.x）
-      href: /python/api/azure-storage-queue/?view=azure-python
-    - name: REST
-      items:
-        - name: Blob、队列、表和文件
-          href: /rest/api/storageservices
-        - name: 存储资源提供程序
-          href: /rest/api/storagerp
-    - name: C++
-      href: 'https://azure.github.io/azure-storage-cpp'
-    - name: Ruby
-      href: 'https://azure.github.io/azure-storage-ruby'
-    - name: PHP
-      href: 'https://azure.github.io/azure-storage-php/'
-    - name: iOS
-      href: 'https://azure.github.io/azure-storage-ios/'
-    - name: Android
-      href: 'https://azure.github.io/azure-storage-android'
+    - name: Azure 队列存储参考
+      href: ../queues/reference.md
     - name: 资源管理器模板
       displayName: ARM
       href: /azure/templates/microsoft.storage/allversions
