--- a/articles/marketplace/index.yml
+++ b/articles/marketplace/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: marleva
   ms.author: maevan
   ms.date: 04/02/2020
-  ms.openlocfilehash: 330dd34e19189dbcd641549f1cd42bf5c5cbaacb
-  ms.sourcegitcommit: 999ccaf74347605e32505cbcfd6121163560a4ae
+  ms.openlocfilehash: 694dd8e2e856c997def8b6af000322d63477d3e4
+  ms.sourcegitcommit: 61d850bc7f01c6fafee85bda726d89ab2ee733ce
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/08/2020
-  ms.locfileid: "82983884"
+  ms.lasthandoff: 06/03/2020
+  ms.locfileid: "84340515"
 landingContent:
 - title: 使用商业市场
   linkLists:
@@ -31,6 +31,8 @@ landingContent:
       url: ./marketplace-faq-publisher-guide.md
     - text: 发行说明
       url: ./marketplace-roadmap.md
+    - text: Microsoft Publisher 协议
+      url: https://go.microsoft.com/fwlink/?LinkID=699560
 - title: 常见方案和任务
   linkLists:
   - linkListType: overview
