--- a/articles/data-lake-analytics/TOC.yml
+++ b/articles/data-lake-analytics/TOC.yml
@@ -151,7 +151,7 @@
       href: /rest/api/datalakeanalytics/
     - name: 资源管理器模板
       href: /azure/templates/microsoft.datalakeanalytics/allversions
-    - name: CLI
+    - name: Azure CLI
       href: 'https://docs.microsoft.com/cli/azure/dla'
 - name: 资源
   items:
