--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -190,6 +190,8 @@
           href: howto-connection-string.md
         - name: 配置 SSL
           href: howto-configure-ssl.md
+        - name: 配置 TLS
+          href: howto-tls-configurations.md
         - name: Web 应用
           href: howto-connect-webapp.md
         - name: 通过重定向进行连接
